# vprogs

./: .env.example  .gitignore  CAIRO_INTEGRATION.md  CAIRO_INTEGRATION_SUMMARY.md  CAIRO_PRIVACY_WALLET_INTEGRATION.md  Cargo.toml  DOCS_CREATED.txt  README.md  RUSTY_KASPA_VERIFICATION.md  WINDOWS_BUILD.md  rustfmt.toml
core/macros/src/: lib.rs  smart_pointer.rs
node/l1-bridge/src/: bridge.rs  error.rs  reorg_filter.rs  virtual_chain.rs  worker.rs
node/test-suite/src/: l1_node.rs  lib.rs
node/transaction-submitter/: Cargo.toml  EXAMPLES_GUIDE.md
node/transaction-submitter/examples/: confidential_transaction.rs  full_privacy_transaction.rs  generate_meta_address.rs  public_transaction_with_cairo_proof.rs  spend_from_stealth_address.rs
node/transaction-submitter/src/: backup.rs  cli.rs  error.rs  key_manager.rs  lib.rs  scanner.rs  wallet.rs
scheduling/execution-workers/src/: batch_queue.rs  execution_workers.rs  worker.rs  workers_api.rs
scheduling/scheduler/src/: access_handle.rs  batch_execution_context.rs  cancellation_context.rs  pruning_worker.rs  resource.rs  resource_access.rs  rollback.rs  runtime_batch.rs  runtime_tx.rs  scheduler.rs  state_diff.rs  storage_cmd.rs
storage/manager/src/: manager.rs
storage/manager/src/read/: manager.rs  worker.rs
storage/manager/src/utils/: cmd_queue.rs  worker_handle.rs
storage/manager/src/write/: manager.rs  worker.rs
storage/rocksdb-store/src/: store.rs
transaction-runtime/address/src/: lib.rs
transaction-runtime/error/src/: lib.rs
transaction-runtime/instruction/src/: lib.rs
transaction-runtime/program-arg/src/: lib.rs
transaction-runtime/program-type/src/: lib.rs
transaction-runtime/program/src/: lib.rs
transaction-runtime/transaction-effects/: Cargo.toml
transaction-runtime/transaction-effects/src/: lib.rs
transaction-runtime/transaction-runtime/: Cargo.toml
transaction-runtime/transaction-runtime/src/: cairo_executor.rs  lib.rs  privacy.rs
transaction-runtime/transaction-runtime/tests/: cairo_integration.rs
wallet-gui/: index.html  package-lock.json  package.json  vite.config.ts
wallet-gui/src/: App.css  App.tsx  styles.css
wallet-gui/src-tauri/: Cargo.toml  tauri.conf.json
wallet-gui/src-tauri/scripts/: create_icon.ps1
wallet-gui/src-tauri/src/: commands.rs  error.rs  main.rs  settings.rs  wallet_service.rs
